--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.josemanuel.ridders" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
         </activity>
-
         <activity
             android:name=".Dispatch"
             android:label="@string/app_name" >
@@ -25,11 +23,41 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Login"/>
-        <activity android:name=".SignUp"/>
-        <activity android:name=".SignUpOrLogin"/>
-
+        <activity android:name=".Login" />
+        <activity android:name=".SignUp" />
+        <activity android:name=".SignUpOrLogin" />
+        <activity
+            android:name=".ListaCategorias"
+            android:label="@string/title_activity_lista_categorias" >
+        </activity>
+        <activity
+            android:name=".ListaCategoriasBoots"
+            android:label="@string/title_activity_lista_categorias_boots" >
+        </activity>
+        <activity
+            android:name=".ListaCategoriasGloves"
+            android:label="@string/title_activity_lista_categorias_gloves" >
+        </activity>
+        <activity
+            android:name=".ListaCategoriasHelmets"
+            android:label="@string/title_activity_lista_categorias_helmets" >
+        </activity>
+        <activity
+            android:name=".ListaCategoriasJackets"
+            android:label="@string/title_activity_lista_categorias_jackets" >
+        </activity>
+        <activity
+            android:name=".ListaCategoriasPants"
+            android:label="@string/title_activity_lista_categorias_pants" >
+        </activity>
+        <activity
+            android:name=".ListaCactegoriasProtection"
+            android:label="@string/title_activity_lista_cactegorias_protection" >
+        </activity>
+        <activity
+            android:name=".ListarCarrito"
+            android:label="@string/title_activity_listar_carrito" >
+        </activity>
     </application>
 
 </manifest>
